--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
-body,html {
-  height: 100%;
+body,
+html {
+    height: 100%;
+}
+
+.game {
+    background-color: darkgrey;
 }
 
 .my-big-btn {
-    width:40%;
-    height:20%;
+    width: 40%;
+    height: 20%;
     font-family: 'Balsamiq Sans', cursive;
     font-size: 300%;
     color: black;
